fix footer on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ footer {
     position: fixed;
     color: white; 
     width: 100%;
-    max-height: 150px;
+    max-height: 500px;
     bottom: 0;
     left: 0; 
     right: 0;
